--- a/wmp1.a/lib/form1.html
+++ b/wmp1.a/lib/form1.html
@@ -1,21 +1,9 @@
-<html>  
-<head>
-<title>day </title>
-</head>
+<html>
+<head>select the day </head>
 <body>
-<h1>select the day </h1>
-<<<<<<< HEAD
-
-<form name="input" method="get">
- 
-<select name="day">
-=======
 <form>
-<form action="">
- 
-<select name="date">
->>>>>>> a0bd81a49e7057805a17869efe1e02de827b7622
-<option value="selected">select date</option> 
+<select name="day">
+<option value="selected">select date</option>
 <option value="1">1</option>
 <option value="2">2</option>
 <option value="3">3</option>
@@ -51,7 +39,7 @@
 
 
 <select name="month">
-<option value="selected">select month</option> 
+<option value="selected">select month</option>
 <option value="January">January</option>
 <option value="February">February</option>
 <option value="March">March</option>
@@ -68,7 +56,7 @@
 
 
 <select name="year">
-<option value="selected">select year</option> 
+<option value="selected">select year</option>
 <option value="1975">1975</option>
 <option value="1976">1976</option>
 <option value="1977">1977</option>
@@ -107,20 +95,11 @@
 <option value="2010">2010</option>
 <option value="2011">2011</option>
 <option value="2012">2012</option>
-<<<<<<< HEAD
 <option value="2013">2013</option>
 <option value="2014">2014</option>
 
 </select>
 <input type="submit" value="submit">
-=======
-
-</select>
-<input type='submit'>
->>>>>>> a0bd81a49e7057805a17869efe1e02de827b7622
-  
-  </form>
-  
+</form>
   </body>
-  
-</html> 
+  </html> 
