--- a/wmp1.a/lib/form1.html
+++ b/wmp1.a/lib/form1.html
@@ -2,7 +2,7 @@
 <head>select the day </head>
 <body>
 <form>
-<select name="day">
+<select name="date">
 <option value="selected">select date</option>
 <option value="1">1</option>
 <option value="2">2</option>
@@ -38,20 +38,22 @@
 </select>
 
 
+
+
 <select name="month">
 <option value="selected">select month</option>
-<option value="January">January</option>
-<option value="February">February</option>
-<option value="March">March</option>
-<option value="April">April</option>
-<option value="May">May</option>
-<option value="June">June</option>
-<option value="July">July</option>
-<option value="August">August</option>
-<option value="September">September</option>
-<option value="October">October</option>
-<option value="November">November</option>
-<option value="DEcember">DEcember</option>
+<option value="1">January</option>
+<option value="2">February</option>
+<option value="3">March</option>
+<option value="4">April</option>
+<option value="5">May</option>
+<option value="6">June</option>
+<option value="7">July</option>
+<option value="8">August</option>
+<option value="9">September</option>
+<option value="10">October</option>
+<option value="11">November</option>
+<option value="12">DEcember</option>
 </select>
 
 
@@ -97,7 +99,6 @@
 <option value="2012">2012</option>
 <option value="2013">2013</option>
 <option value="2014">2014</option>
-
 </select>
 <input type="submit" value="submit">
 </form>
